<resources>
    <string name="app_name">desafio-Android-Klever</string>

    <!-- Tela de Cadastro -->
    <string name="cadastro_nome_hint">Nome do Usuario</string>
    <string name="cadastro_email_hint">E-mail do Usuario</string>
    <string name="cadastro_cep_hint">CEP do Usuario</string>
    <string name="cadastro_estado_hint">Estado</string>
    <string name="cadastro_cidade_hint">Cidade</string>
    <string name="cadastro_bairro_hint">Bairro</string>
    <string name="cadastro_rua_hint">Rua</string>
    <string name="text_btn_criar">Criar</string>
    <string name="text_btn_atualizar">Atualizar</string>
    <string name="text_btn_deletar">Deletar</string>
    <string name="cadastro_titulo">Cadastrar</string>
    <string name="cadastro_inserido_sucesso">Cadastro realizado com Sucesso!</string>
    <string name="cadastro_atualizado_sucesso">Cadastro atualizado com Sucesso!</string>
    <string name="cadastro_deletado_sucesso">Cadastro deletado com Sucesso!</string>
    <string name="cadastro_erro_inserir">Houve um erro ao inserir o Cadastro!</string>
    <string name="cadastro_erro_atualizar">Houve um erro ao atualizar o Cadastro!</string>
    <string name="cadastro_erro_deletar">Houve um erro ao atualizar o Cadastro!</string>
    <string name="validacao_email">Insira um endereço de email valido!</string>
    <string name="validacao_nome">4 letras no minimo!</string>
    <string name="validacao_cep_vazio">O campo não pode estar vazio!</string>
    <string name="validacao_cep">Informe um CEP válido!</string>

    <!-- Tela de listagem dos Cadastros -->
    <string name="listagem_titulo">Cadastros</string>
</resources>
